labs/5-traffic-management/lab5/reviews-only-to-v2-and-cb.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  exportTo:
  - back
  - front
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: reviews
spec:
  host: reviews
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
  subsets:
    - labels:
        version: v2
      name: v2
