labs/5-traffic-management/lab5/vsdr-ratings-v1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  exportTo:
  - $USER_NAMESPACE-back
  - $USER_NAMESPACE-front
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: ratings
  exportTo:
  - $USER_NAMESPACE-back
  - $USER_NAMESPACE-front
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
          simple: RANDOM
      tls:
        mode: ISTIO_MUTUAL
